styles/styles.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
@import url("https://fonts.googleapis.com/css?family=K2D");
@import url("https://fonts.googleapis.com/css?family=Faster One");

/*tutorial found on youtube for both mobile and desktop navbar, found here:
    https://www.youtube.com/watch?v=8QKOaTYvYUA - author: Kevin Powell*/


:root {
    background-color: #150941;
    color:white;
    font-family: 'K2D';
    --bg_opacity: #f7195000;
    --pink: #f71950;
    --blue: #150941;
}

/*custom scrollbar styling*/

::-webkit-scrollbar { /* width of the scrollbar */
    width: 10px;
}
  
::-webkit-scrollbar-track {  /* color of track*/
    background: #ffffff;
}
  
::-webkit-scrollbar-thumb { /* color of handle */
    background: var(--pink);
}
  
::-webkit-scrollbar-thumb:hover { /* color of handle on hover */
    background: #720b25;
}

/*end of custom scrollbar stlying*/

body{
    min-height: 100vh;
    overflow-x: hidden;
    margin:0%;
}

.welcome {
    z-index: 1;
    font-family: 'Faster One';
    font-size: 90pt;
    color: rgb(238, 167, 14);
    text-align: center;
    margin-top: 400px;
}

.welcometag {
    text-align: center;
    position: absolute;
    font-family: 'K2D';
    font-size: 40pt;
    color: slategray;
    text-decoration: none;      
}

.welcometag:hover{
    color: rgb(238, 167, 14);
}

/*mobile first navbar styling*/

header {
    background-color: var(--blue);
    text-align: center;
    position: fixed;
    width: 100%;
    height: 60px;
    z-index: 999;
}

.nav-toggle {
    display: none;
}

.nav-toggle-label {
    position: absolute;
    top: 0;
    right: 0;
    margin-right: 5rem;
    height: 100%;
    display: flex;
    align-items: center;
    cursor: pointer;

}

.nav-toggle-label span, 
.nav-toggle-label span::before, 
.nav-toggle-label span::after {
    display: block;
    background-color: var(--pink);
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;
}

.nav-toggle-label span:hover,
.nav-toggle-label span:hover::before,
.nav-toggle-label span:hover::after {
    background-color: var(--pink);
    transform: scale(1.5, 1.5);
    transition: transform 500ms ease-in-out;
}

.nav-toggle-label span:active,
.nav-toggle-label span:active::before,
.nav-toggle-label span:active::after {
    background-color: var(--pink);
}

.nav-toggle-label span::before, 
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}

.logo {
    height: 50%;
    width: auto;
    margin-left: -100px;
    margin-top: 15px; 
}

nav {
    position:absolute;
    text-align: right;
    top: 100%;
    right: 0;
    background-color: var(--pink);
    width: 100%;
    height: 100vmax;
    transform: scale(1, 0);
    transform-origin: top;
    transition: transform 500ms ease-in-out;
}

nav ul {
    margin-left: 0;
    list-style: none;
    margin-top: 5em;
}

nav li {
    margin-bottom: 1em;
    margin-right: 5em;
    padding: 2em;
}

nav a {
    text-decoration: none;
    font-size: 1.2rem;
    font-family: 'K2D';
    opacity: 0;
    transition: opacity 100ms ease-in-out;
}

nav a:hover {
    color: var(--pink);
}

.nav-toggle:checked ~ nav {
    transform: scale(1, 1); 
}

.nav-toggle:checked ~ nav a {
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
}

nav a::before {
    content: '';
    display: block;
    height: 5px;
    background: var(--pink);
    position: relative;
    left: 0;
    right: 0;
    transform: scale(0, 1);
    transform-origin: right;
    transition: transform ease-in-out 250ms;
}

nav a:hover::before {
    transform: scale(1, 1);
}

/*end of mobile first nav bar styling*/

@media screen and (min-width: 920px) { /*desktop version of navbar*/
    
    .nav-toggle-label {
        display: none;
    }

    header {
        display: grid;
        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
        position: fixed;
        height: 75px;
    }

    .logo {
        display: block;
        grid-column: 1 / 3;
        align-items: center;
        margin-left: 5em;
        margin-top: 20px;
        width: 60%;
        height: auto;
    }

    nav {
        all: unset;
        display: flex;
        grid-column:  3/ 5;
        justify-content: flex-end;
        white-space: nowrap;  
    }

    nav ul {
        position: relative;
        display: flex;
        bottom: 8px;
        margin-top: auto;    
    }

    nav li {
        margin-left: 5em;
        margin: 0; 
}

    nav a {
        opacity: 1;
        position: relative;
    }

    nav a::before {
        content: '';
        display: block;
        height: 5px;
        background: var(--pink);
        position: absolute;
        top: -0.5em;
        left: 0;
        right: 0;
        transform: scale(0, 1);
        transform-origin: right;
        transition: transform ease-in-out 250ms;
    }

    nav a:hover::before {
        transform: scale(1, 1);
    }
}
/* ... */

